# lgc-rs

./: Cargo.toml  README.md  TODO.md
.circleci/: config.yml
examples/: author_example.rs  branch_example.rs  date_example.rs  id_example.rs  message_example.rs  path_example.rs
src/: _lib.rs  author.rs  builder.rs  id.rs  lib.rs
tests/: author.rs  branch.rs  date.rs  id.rs  message.rs  path.rs  test.rs
