[package]
name = "last-git-commit"
version = "0.2.0-alpha"
authors = ["olback <lgc@olback.net>"]
edition = "2018"
description = "Simple wrapper arround git2-rs to get info about the last commit. Useful for when you want to show the git hash in a program."
homepage = "https://github.com/olback/lgc-rs"
repository = "https://github.com/olback/lgc-rs"
readme = "README.md"
keywords = ["git", "commit", "hash", "simple", "time"]
categories = ["data-structures"]
license = "MIT"

[badges]
circle-ci = { repository = "olback/lgc-rs" }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
